<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main_cmd_cru"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="on_cru_click"
        android:text="@string/main_cmdcru_caption" />

    <Button
        android:id="@+id/main_cmd_sis"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="on_sis_click"
        android:text="@string/main_cmdsis_caption" />

    <Button
        android:id="@+id/main_cmd_exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="on_exit_click"
        android:text="@string/main_cmdexit_caption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" >

  
        <TextView
            android:id="@+id/lable_hello_owner_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_hello_owner"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical" >

    
        <TextView
            android:id="@+id/lbl_sis_statistic_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lable_author_message"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>